--- a/rails/app/assets/stylesheets/kickstart_rails/core/_animations.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_animations.sass
@@ -1,8 +1,8 @@
 @keyframes fadeInDown 
   0%
     opacity: 0
-    // transform: translateY(-20px)
+    transform: translateY(-20px)
 
   100%
     opacity: 1
-    // transform: translateY(0)
+    transform: translateY(0)
