Finishing up throttling

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -54,6 +54,18 @@ footer.main
     color: white
     text-decoration: underline
 
+// Iframes
+// -------
+
+iframe.animation
+  max-width: 500px
+  height: 200px
+  display: block
+  margin-left: auto
+  margin-right: auto
+  margin-bottom: 25px
+  overflow: hidden
+
 // Components
 // ----------
 
