--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/typography.sass
@@ -3,5 +3,54 @@
 .example
   h1
     +heading-lg
-  h1
+
+    &.xxl
+      +heading-xxl
+
+    &.xl
+      +heading-xl
+
+    &.lg
+      +heading-lg
+
+    &.md
+      +heading-md
+
+    &.rg
+      +heading-rg
+
+    &.sm
+      +heading-sm
+
+    &.xs
+      +heading-xs
+
+    &.xxs
+      +heading-xxs
+
+  h2
     +heading-md
+
+  h3
+    +heading-rg
+
+  h4
+    +heading-sm
+
+  h5
+    +heading-xs
+
+  h6
+    +heading-xxs
+
+  p.readable
+    +p(true)
+
+  .page-heading
+    +page-heading
+
+.list-unstyled
+  +list($style: 'unstyled')
+
+  &.list-horizontal
+    +list($style: 'unstyled horizontal')
